New Data Updates

--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=college-management-system
+
+# Database Configurations
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/college_ms_backend_apis
+spring.datasource.username=root
+spring.datasource.password=Somen0701
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configurations
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
